# SquirrelTest

./: CMakeLists.txt  CStackGetter.h  CStackSetter.h  CVm.cpp  CVm.h  main.cpp  test.nut
